updates header style to a container

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -74,22 +74,24 @@
 <div class="container-fluid">
 <!-- QUICKLINKS TOOLBAR -->
   <div class="navbar navbar-fixed-top toolbar">
-    <div class="navbar-header col-sm-12">
+    <div class="blue-header">
+      <div class="container ">
+
         <span class="glyphicon glyphicon-search glyphicon-search-mobile"></span>
         <button type="button " class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="sr-only">Toggle quick links navigation</span>
           <span class="fa fa-bars"></span>
         </button>
-        <div class="col-xs-9">
+        <div class="col-xs-10">
           <img class="hidden-md hidden-lg mobile-logo" src="http://sitemanager.msudenver.edu/media/assets/img/MSUdenver-logo.png" alt="MSU Denver Formal Logo">
           <img class="msudenver_logo" src="http://sitemanager.msudenver.edu/media/assets/img/MSUdenver-logo.png" alt="MSU Denver Logo">
         </div>
         <div class="col-xs-2 apply-button">APPLY</div>
-        <div class="col-xs-1">
-        </div>
-    </div>
 
+    </div>
+</div>
     <div class="navbar-collapse collapse" id="content-nav">
+      <div class="container">
          <ul class="nav navbar-nav navbar-center" >
            <li class="dropdown" id="nav-admissions">
            <a href="/admissions" >ADMISSIONS </a><i class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></i>
@@ -295,10 +297,11 @@
                 </form>
             </div> -->
     </div>
+    </div>
   </div>
       <!--/.nav-collapse -->
 </div>
-</div>
+
 
 <!-- *********************************  -->
 <!-- Global Header ENDS HERE -->
