--- a/app/homepage.html
+++ b/app/homepage.html
@@ -448,9 +448,8 @@ Celebration of MSU Denver's <br>
 
 <!-- Footer NAV ID -->
 <!-- BEGINS  FOOTER -->
-<div class="container-fluid">
-    <div class="row footer">
-      <div>
+<div class="footer">
+<div class="container ">
 
         <div class="col-sm-6 col-md-6 col-lg-4 social campus-info mobile-msuinfo-show">
               <p>
@@ -508,7 +507,7 @@ Celebration of MSU Denver's <br>
             </i>
             <br/><br/>
         </div>
-        <div class="col-sm-6 col-md-6 col-lg-3 social campus-info desktop-msuinfo-show">
+        <div class="col-sm-6 col-md-6 col-lg-4 social campus-info desktop-msuinfo-show">
               <p>
                 <a href="https://msudenver.edu"><strong>Metropolitan State University of Denver</strong></a><br><br>
                 <a href="https://msudenver.edu/maps"><span class="fa fa-map-marker fa-lg"></span> Denver, Colorado</a><br><br>
@@ -525,9 +524,9 @@ Celebration of MSU Denver's <br>
              </i>
         </div>
 
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 footer-logo">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-2 footer-logo">
           <a href="https://msudenver.edu"> <img src="http://sitemanager.msudenver.edu/media/assets/homepagespring2016/msudenver-informal_logo.png"></a><br><br>
-          <small>&copy;</small></a><a><small> MSU Denver -</small></a>
+          <small>&copy;</small></a><a><small> MSU Denver</small></a><br>
           <a href="/privacy"><small>Privacy Statement</small></a> <br>
           <a href="http://www.collegeportraits.org/CO/MSU_Denver" target="_blank"><small>College Portrait</small></a>
           <br>
