moves footer to app builder

--- a/app/2column.html
+++ b/app/2column.html
@@ -773,95 +773,10 @@
         </div>
     </div>
 
-    <!-- BEGINS  FOOTER -->
-    <div class="container-fluid">
-    <div class="row footer">
-      <div>
 
-        <div class="col-sm-6 col-md-6 col-lg-4 social campus-info mobile-msuinfo-show">
-              <p>
-                <strong>Metropolitan State University of Denver</strong><br><br>
-                <a href="/maps"><span class="fa fa-map-marker fa-lg"></span>    Denver, Colorado</a><br><br>
-                <a href="tel:303-556-5740"><span class="fa fa-phone fa-lg"></span>   303-556-5740</a><br><br>
-                <a onclick="javascript:OpenLHNChat();return false;" href="#"><span class="fa fa-comments chat-icon fa-lg"></span> Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a><br><br>
-              </p>
-              <i class="social-non-mobile">
-               <a href="https://www.facebook.com/msudenver" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
-               <a href="http://twitter.com/msudenver" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
-               <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
-               <a href="https://instagram.com/msu_denver" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
-               <a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank"><i class="fa fa-flickr fa-2x"></i></a>
-               <a href="http://www.youtube.com/user/msudenver" target="_blank"><i class="fa fa-youtube-square fa-2x"></i></a><br>
-             </i>
-        </div>
 
-        <div class="col-sm-12 col-md-12 col-lg-6 footer-menu">
-            <div class="col-sm-6 col-md-6 col-lg-6">
-              <p>
-                <a href="https://msudenver.edu/about">About</a><br>
-                <hr />
-                <a href="https://msudenver.edu/programs">Academic Programs</a><br>
-                <hr/>
-                <a href="https://msudenver.edu/cost/">Cost</a><br>
-                <hr/>
-                <a href="https://msudenver.edu/financialaid/">Financial Aid</a><br>
-                <hr/>
-                <a href="http://www.tivolistation.com/" target="_blank">Bookstore</a>
-                <hr class="hide-hr"/>
-              </p>
-            </div>
-            <div class="col-sm-6 col-md-6 col-lg-6">
-              <p>
-                <a href="https://msudenver.edu/visit/ ">Visit</a><br>
-                <hr/>
-                <a href="http://library.auraria.edu" target="_blank">Library</a><br>
-                <hr/>
-                <a href="https://myatlascms.com/map/?id=225#!ct/2317?mc/39.74257855991715,-105.0048565864563?z/16">Parking</a><br>
-                <hr/>
-                <a href="https://www.msudenverjobs.com/postings/search" target="_blank">Careers</a><br>
-                <hr/>
-                <a href="https://msudenver.edu/safety/">Safety</a>
-              </p>
-            </div>
-            <br/><br/>
-            <i class="social-mobile">
-             <a href="https://www.facebook.com/msudenver" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
-             <a href="http://twitter.com/msudenver" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
-             <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
-             <a href="https://instagram.com/msu_denver" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
-             <a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank"><i class="fa fa-flickr fa-2x"></i></a>
-             <a href="http://www.youtube.com/user/msudenver" target="_blank"><i class="fa fa-youtube-square fa-2x"></i></a><br>
-            </i>
-            <br/><br/>
-        </div>
-        <div class="col-sm-6 col-md-6 col-lg-3 social campus-info desktop-msuinfo-show">
-              <p>
-                <strong>Metropolitan State University of Denver</strong><br><br>
-                <a href="https://msudenver.edu/maps"><span class="fa fa-map-marker fa-lg"></span> Denver, Colorado</a><br><br>
-               <span class="fa fa-phone fa-lg"></span>    303-556-5740<br><br>
-                <a onclick="javascript:OpenLHNChat();return false;" href="#"><span class="fa fa-comments chat-icon fa-lg"></span> Chat with Us <span class="small">(8AM–5PM. MT, Weekdays)</span></a><br><br>
-              </p>
-              <i class="social-non-mobile">
-               <a href="https://www.facebook.com/msudenver" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
-               <a href="http://twitter.com/msudenver" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
-               <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
-               <a href="https://instagram.com/msu_denver" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
-               <a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank"><i class="fa fa-flickr fa-2x"></i></a>
-               <a href="http://www.youtube.com/user/msudenver" target="_blank"><i class="fa fa-youtube-square fa-2x"></i></a><br>
-             </i>
-        </div>
+<div w3-include-html="htmlcomponents/footer.html"></div>
 
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 footer-logo">
-         <a href="/" ><img src="http://sitemanager.msudenver.edu/media/assets/homepagespring2016/msudenver-informal_logo.png"></a><br><br>
-          <p><small>&copy; MSU Denver -</small>
-          <a href="/privacy"><small>Privacy Statement</small></a> <br>
-          <a href="http://www.collegeportraits.org/CO/MSU_Denver" target="_blank"><small>College Portrait</small></a>
-           </p>
-          <br>
-        </div>
-      </div>
-    </div>
-</div>
     <!-- ENDS FOOTER -->
 <!-- This code must be installed within the body tags -->
 <script type="text/javascript">
