--- a/app/homepage.html
+++ b/app/homepage.html
@@ -223,92 +223,7 @@ Celebration of MSU Denver's <br>
 
 <!-- Footer NAV ID -->
 <!-- BEGINS  FOOTER -->
-<div class="footer">
-<div class="container ">
-
-        <div class="col-sm-6 col-md-6 col-lg-4 social campus-info mobile-msuinfo-show">
-              <p>
-                <a href="/"><strong>Metropolitan State University of Denver</strong></a><br><br>
-                <a href="/maps" id="Footer-Map"><span class="fa fa-map-marker fa-lg"></span> Denver, Colorado</a><br><br>
-                <a href="tel:303-556-5740" id="Footer-Phone"><span class="fa fa-phone fa-lg"></span> 303-556-5740</a><br><br>
-                <a onclick="javascript:OpenLHNChat();return false;" href="#" id="Footer-Chat"><span class="fa fa-comments chat-icon fa-lg"></span> Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a><br><br>
-              </p>
-              <i class="social-non-mobile">
-               <a href="https://www.facebook.com/msudenver" target="_blank" id="Footer-Facebook"><i class="fa fa-facebook-square fa-2x"></i></a>
-               <a href="http://twitter.com/msudenver" target="_blank" id="Footer-Twitter"><i class="fa fa-twitter-square fa-2x"></i></a>
-               <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank" id="Footer-Linkedin"><i class="fa fa-linkedin-square fa-2x"></i></a>
-               <a href="https://instagram.com/msu_denver" target="_blank" id="Footer-Instagram"><i class="fa fa-instagram fa-2x"></i></a>
-               <a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank" id="Footer-Flickr"><i class="fa fa-flickr fa-2x"></i></a>
-               <a href="http://www.youtube.com/user/msudenver" target="_blank" id="Footer-Youtube"><i class="fa fa-youtube-square fa-2x"></i></a><br>
-             </i>
-        </div>
-
-        <div class="col-sm-12 col-md-12 col-lg-6 footer-menu">
-            <div class="col-sm-6 col-md-6 col-lg-6">
-              <p>
-                <a href="https://msudenver.edu/about" id="Footer-About">About</a><br>
-                <hr />
-                <a href="https://msudenver.edu/programs" id="Footer-DegreePrograms">Degree Programs</a><br>
-                <hr/>
-                <a href="https://msudenver.edu/admissions/cost/" id="Footer-Cost">Cost</a><br>
-                <hr/>
-                <a href="https://msudenver.edu/financialaid/"id="Footer-FinancialAid">Financial Aid</a><br>
-                <hr/>
-                <a href="http://www.tivolistation.com/"id="Footer-Bookstore" target="_blank">Bookstore</a>
-                <hr class="hide-hr"/>
-              </p>
-            </div>
-            <div class="col-sm-6 col-md-6 col-lg-6">
-              <p>
-                <a href="https://msudenver.edu/admissions/takeatour/" id="Footer-Tours">Tours</a><br>
-                <hr/>
-                <a href="https://msudenver.edu/visit/quickdirections/" id="Footer-Directions">Directions</a><br>
-                <hr/>
-                <a href="https://myatlascms.com/map/?id=225#!ct/2317?mc/39.74257855991715,-105.0048565864563?z/16" id="Footer-Parking">Parking</a><br>
-                <hr/>
-                <a href="https://www.msudenverjobs.com/postings/search" id="Footer-Careers" target="_blank">Careers</a><br>
-                <hr/>
-                <a href="https://msudenver.edu/campussafetyandcrime/">Safety</a>
-              </p>
-            </div>
-            <br/><br/>
-            <i class="social-mobile">
-             <a href="https://www.facebook.com/msudenver" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
-             <a href="http://twitter.com/msudenver" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
-             <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
-             <a href="https://instagram.com/msu_denver" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
-             <a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank"><i class="fa fa-flickr fa-2x"></i></a>
-             <a href="http://www.youtube.com/user/msudenver" target="_blank"><i class="fa fa-youtube-square fa-2x"></i></a><br>
-            </i>
-            <br/><br/>
-        </div>
-        <div class="col-sm-6 col-md-6 col-lg-4 social campus-info desktop-msuinfo-show">
-              <p>
-                <a href="https://msudenver.edu"><strong>Metropolitan State University of Denver</strong></a><br><br>
-                <a href="https://msudenver.edu/maps"><span class="fa fa-map-marker fa-lg"></span> Denver, Colorado</a><br><br>
-                <a href="tel:303-556-5740"><span class="fa fa-phone fa-lg"></span> 303-556-5740</a><br><br>
-                <a onclick="javascript:OpenLHNChat();return false;" href="#"><span class="fa fa-comments chat-icon fa-lg"></span> Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a><br><br>
-              </p>
-              <i class="social-non-mobile">
-               <a href="https://www.facebook.com/msudenver" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
-               <a href="http://twitter.com/msudenver" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
-               <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
-               <a href="https://instagram.com/msu_denver" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
-               <a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank"><i class="fa fa-flickr fa-2x"></i></a>
-               <a href="http://www.youtube.com/user/msudenver" target="_blank"><i class="fa fa-youtube-square fa-2x"></i></a><br>
-             </i>
-        </div>
-
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-2 footer-logo">
-          <a href="https://msudenver.edu"> <img src="http://sitemanager.msudenver.edu/media/assets/homepagespring2016/msudenver-informal_logo.png"></a><br><br>
-          <small>&copy;</small></a><a><small> MSU Denver</small></a><br>
-          <a href="/privacy"><small>Privacy Statement</small></a> <br>
-          <a href="http://www.collegeportraits.org/CO/MSU_Denver" target="_blank"><small>College Portrait</small></a>
-          <br>
-        </div>
-      </div>
-    </div>
-</div>
+<div w3-include-html="htmlcomponents/footer.html"></div>
     <!-- ENDS FOOTER -->
 <!-- This code must be installed within the body tags -->
 <script type="text/javascript">
@@ -453,7 +368,6 @@ $('#nav-search-close').click(function(){
 	$('#nav-cause, #nav-health, #nav-stories, #nav-research, #nav-involved, #nav-admissions, #nav-academics, #nav-campus, #nav-athletics, #nav-hub, #nav-alumni, #nav-faculty, #nav-search').fadeTo('slow', 1);
 });
 </script>
-
 
 
 <script>
