fixes styles and adds body padding

--- a/app/2column.html
+++ b/app/2column.html
@@ -42,10 +42,11 @@
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,300,700,600' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Raleway:400,500,800" rel="stylesheet">
 
 <!-- CSS -->
 <link rel="stylesheet" type="text/css" media="screen" href="styles/main2016.css" />
-<link rel="stylesheet" type="text/css" media="print" href="https://msudenver.edu/media/assets/css/print.css" />
+<link rel="stylesheet" type="text/css" media="print" href="https://msudenver.eduhttps://msudenver.edu/media/assets/css/print.css" />
 <!-- T4 CSS -->
 <t4 type="media" id="109887"/>
 <t4 type="media" id="61332"/>
@@ -58,7 +59,6 @@
 
 <!-- BEGINS MUlTIPLE COL SPECIFIC DEPENDENCIES  -->
 <script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/jquery/jquery.min.js"></script>
-
 <script src="http://www.w3schools.com/lib/w3data.js"></script>
 <!-- Fav and touch icons -->
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="<t4 type='media' id='60992' formatter='image/path'/>">
@@ -109,7 +109,7 @@
 <t4 type="navigation" id="106" />
 
 <div class="hero">
-<img class="img-responsive" src="http://sitemanager.msudenver.edu/media/content/wcms/departmentsiteguidelines/header_image.png" alt="work study help desk" style="   " />
+<img class="img-responsive" src="http://msudenver.edu/media/content/wcms/departmentsiteguidelines/header_image.png" alt="work study help desk" style="   " />
   <div class="hero-caption"><p>Body of Page Hero Image Content Type</p>
 <p>Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. <br /><br /></p></div>
 </div>
@@ -287,7 +287,6 @@ lhnWin=window.open('http://chat.msudenver.edu/lhn/livechatvisitor.aspx?lhnid=294
     var version = "0.2.5",
         template = "Two column template";
     </script>
-
 
     <script>
     w3IncludeHTML();
