--- a/app/homepage.html
+++ b/app/homepage.html
@@ -107,8 +107,8 @@
 <br>
   <h3><a href="/50">
 Join the yearlong <br>
-Celebration of MSU Denver's <br>
-<strong>50th Anniversary </strong>  </a>
+Celebration of MSU Denvers <br>
+<strong> Anniversary </strong>  </a>
 </h3>
 </div>
   </div>
