--- a/app/2column.html
+++ b/app/2column.html
@@ -59,6 +59,7 @@
 <!-- BEGINS MUlTIPLE COL SPECIFIC DEPENDENCIES  -->
 <script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/jquery/jquery.min.js"></script>
 
+<script src="http://www.w3schools.com/lib/w3data.js"></script>
 <!-- Fav and touch icons -->
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="<t4 type='media' id='60992' formatter='image/path'/>">
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="<t4 type='media' id='60991' formatter='image/path'/>">
@@ -70,79 +71,19 @@
 
 <body>
   <a href="#content" class="sr-only">Skip to main content</a>
-  <div class="container-fluid toolbar-background">
-          <!-- QUICKLINKS TOOLBAR -->
-          <div class="navbar navbar-static-top toolbar">
-              <div class="navbar-header">
-                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                      <span class="sr-only">Toggle quick links navigation</span>
-                      <span class="fa fa-bars"></span>
-                  </button>
-                  <img class="navbar-brand hidden-md hidden-lg img-responsive" src="https://msudenver.edu//media/assets/homepagespring2016/msudenver_logo_transparent_mobile.png" alt="MSU Denver Formal Logo">
-                  <!-- <img class="navbar-brand hidden-md hidden-lg img-responsive" src="<t4 type='media' id='105951' formatter='image/path'/>" alt="MSU Denver Formal Logo"> -->
-
-              </div>
-              <div class="toolbar-background">
-                  <div class="background"></div>
-                  <div class="container">
-              <div class="navbar-collapse collapse">
-
-                <div class="col-xs-12 col-sm-6 col-md-12 col-lg-6">
-                  <ul class="nav navbar-nav navbar-center">
-                    <li class="quicktools"><a href="/studenthub"><strong>Student Hub</strong></a></li>
-                    <li class="quicktools"><a href="/facstaff">Faculty &amp; Staff</a></li>
-                    <li class="quicktools"><a href="http://library.auraria.edu">Library</a></li>
-                    <li class="quicktools"><a href="/giving">Support Us</a></li>
-                    <li class="quicktools"><a href="/maps">Maps</a></li>
-
-                  </ul>
-                </div>
-
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
-                      <form class="custom-search-input" role="search" action="https://www.msudenver.edu/search">
-                        <div class="input-group">
-                          <input type="hidden" name="cx" value="004867254463714202705:1ammfpknuzw" class="form-control" placeholder="Search">
-            <input type="hidden" name="cof" value="FORID:11" class="form-control" placeholder="Search">
-            <input type="hidden" name="ie" value="UTF-8" class="form-control" placeholder="Search">
-              <label for="q" class="sr-only">Search MSU Denver site</label>
-                          <input type="text" id="q" class="form-control"  name="q"  placeholder="Search MSU Denver" size="30">
-                          <span class="input-group-btn">
-                            <button type="submit" class="btn btn-default" id="qButton"><i class="fa fa-search"></i></button>
-                          </span>
-                         </div>
-          </form>
-                   </div>
-
-                     <section class="col-xs-12 col-sm-6 col-md-6 col-lg-3 nav navbar-nav nav-social">
-                       <a href="https://www.facebook.com/msudenver" target="_blank"><i class="fa fa-facebook-square"></i></a>
-                       <a href="http://twitter.com/msudenver" target="_blank"><i class="fa fa-twitter-square"></i></a>
-                       <a href="https://instagram.com/msudenver50" target="_blank"><i class="fa fa-instagram"></i></a>
-                       <a href="http://www.youtube.com/user/msudenver" target="_blank"><i class="fa fa-youtube-square"></i></a>
-                       <a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank"><i class="fa fa-flickr"></i></a>
-                       <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank"><i class="fa fa-linkedin-square"></i></a>
-                   </section>
-              </div>
-              <!--/.nav-collapse -->
-          </div>
-        </div>
-      </div>
-  </div>
-
-
+  <!-- *********************************  -->
+  <!-- Global Header STARTS HERE -->
+  <!-- *********************************  -->
+  <div w3-include-html="htmlcomponents/header.html"></div>
+  <!-- *********************************  -->
+  <!-- Global Header ENDS HERE -->
+  <!-- *********************************  -->
 
 <!-- BEGINS BREADCRUMBS + SITEHEADER -->
 <div class="container">
     <div class="row">
-      <!-- MSU DENVER LOGO -->
-        <div class="col-lg-3 col-md-3 col-sm-12 msudenver_logo">
-          <a href="/">
-<img class="img-responsive center-block hidden-xs hidden-sm" src="media/assets/msudenver_logo.png" alt="MSU Denver Formal Logo">
-<!-- <img class="img-responsive center-block hidden-xs hidden-sm" src="<t4 type='media' id='91275' formatter='image/path'/>" alt="MSU Denver Formal Logo"> -->
-            </a>
-        </div>
-        <!-- ENDS MSU DENVER LOGO -->
         <!-- SITE HEADER -->
-      <div class="col-lg-9 col-md-9 col-sm-12">
+      <div class="col-xs-12">
       <div class="siteheader">
             <h1>Newsroom</h1>
             <h1><t4 type='navigation' id='101' /></h1>
@@ -167,71 +108,20 @@
 <!-- BEGINS HERO IMAGE -->
 <t4 type="navigation" id="106" />
 
+<div class="hero">
+<img class="img-responsive" src="http://sitemanager.msudenver.edu/media/content/wcms/departmentsiteguidelines/header_image.png" alt="work study help desk" style="   " />
+  <div class="hero-caption"><p>Body of Page Hero Image Content Type</p>
+<p>Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. <br /><br /></p></div>
+</div>
+
+
+
+
                         <!-- *********************************  -->
                         <!-- SITEMANAGER HEADER ENDS HERE -->
                         <!-- *********************************  -->
 
-
-<!-- Story - text/sfulltext-->
-<h2>Decorated designer</h2>
-<h3>She is an incredible designer who consistently creates amazing solutions</h3>
-<section class="byline"><a href="mailto:edavies@msudenver.edu">Emily Davies</a> | <span class="byline-date">May 17, 2016</span></section>
-<hr>
-<section class='Newsroom-image'> <figure class="thumbnail" id="109765" >
-<img class="img-responsive" src='https://msudenver.edu/media/content/newsroom/stories/2016/may/Kirsten-Morrison-web.jpg' alt='Senior communications design major Kristen Morrison has won seven national awards for her work with Met Media. PHOTO: Courtesy of Kristen Morrison.'/>
-<figcaption class="caption">Senior communications design major Kristen Morrison has won seven national awards for her work with Met Media. PHOTO: Courtesy of Kristen Morrison.</figcaption>
-</figure> </section>
-<p>After just a few months working for <a href="http://mymetmedia.com/">Met Media</a>, Kristen Morrison, a communication design major slated to graduate in December 2016, felt like she was at the top of her class &ndash; at least in terms of what she was learning. Because of her job, Morrison was already familiar with many of the design tools covered in her classes.</p>
-<p>&ldquo;Feeling and being ahead of the game has not only allowed me to thrive when it comes to my design coursework, but it has drastically improved my confidence in myself and what I do,&rdquo; said Morrison.</p>
-<p>And with seven national student design awards in her pocket, including being named second best designer in the country from College Media Business and Advertising Managers, Morrison is definitely thriving.</p>
-<p>&ldquo;She is an incredible designer who consistently creates amazing solutions with an eye for design that is extremely advanced for how far along she is in school,&rdquo; said Kathleen Jewby, production manager at Met Media.</p>
-<p>Now a senior designer after two years with Met Media, Morrison trains junior designers and works with internal and external clients both on and off campus to create advertising, identity systems and marketing materials.</p>
-<p>Take <a href="https://fs22.formsite.com/cmaforms/files/f-33-778-7918850_yhICwFmw_MSUDenver_MediaKit.pdf">Met Media&rsquo;s media kit</a>, the first project Morrison was assigned when she started the job. It&rsquo;s one of her favorite projects not only because of what she learned but because she was able to take charge of the whole design. And her hard work paid off, winning herself and Met Media a first place 2015 Associated Collegiate Press award for a rate card and a second place 2015 College Media Association Pinnacle award for best rate cardhttps://msudenver.edu/media kit.</p>
-<p>Or, another example, the 24th annual <a href="https://fs22.formsite.com/cmaforms/files/f-33-522-7918850_pTjcmrNJ_MSUDenver_DisplayCMYK.pdf">Martin Luther King Jr. Peace Breakfast</a>. Morrison said she was honored to create the event&rsquo;s logo, program, marketing materials and an advertisement, which won her three awards in 2015: a first place CMBAM award for color display ad, and two second place display ad awards from ACP and CMA.</p>
-<p>Yet despite all the recognition her hard work has given her, Morrison said winning the awards is not her main goal.</p>
-<p>&ldquo;I just find myself driven to put out my best work, no matter what the project,&rdquo; Morrison said. &ldquo;I feel really humbled by it all, and I&rsquo;m really grateful to have been given such amazing opportunities.&rdquo;</p>
-<p>And she said she has Met Media to thank for that.</p>
-<p>&ldquo;I know that without working there, and working with such a talented group of people, I would not be in the position I am today,&rdquo; said Morrison. &ldquo;I&rsquo;d especially like to thank all the graphic designers I&rsquo;ve worked with throughout my time there. Every single one of them has been so beyond talented, and it pushes me to try and be better every day.&rdquo;</p>
-<div class="row">
-
-    <h3 class="pager col-lg-12 col-md-12 col-sm-12 col-xm-12">
-        <i class="fa fa-angle-left"></i>
-         Newer   -   <a href="/newsroom/news/2016/may/17-phishing-technology.shtml" title="17-phishing-technology" >Previous <i class="fa fa-angle-right"></i></a>
-    </h3>
-</div>
-    <div id="disqus_thread"></div>
-    <script type="text/javascript">
-      var disqus_shortname = 'msudenver';
-      var disqus_identifier = '109745';
-    	var disqus_title = 'Decorated designer';
-      var disqus_category_id = '3183499';
-        (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
-    </script>
-
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-<div id="Copyright">
-    <p class="hidden">
-        <i>©Copyright 2013 by Metropolitan State University of Denver. All rights reserved.
-            <br>MSU Denver Office of Marketing and Communications, 303-556-2957</i>
-    </p>
-</div>
-<!-- AddThis Smart Layers BEGIN -->
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-50bcee997bd3c4be"></script>
-<script type="text/javascript">
-  addthis.layers({
-    'theme' : 'transparent',
-    'share' : {
-      'position' : 'right',
-      'numPreferredServices' : 6
-    },
-  });
-</script>
-<!-- AddThis Smart Layers END -->
-
+<div w3-include-html="htmlcomponents/content.html"></div>
 
                         <!-- *********************************  -->
                         <!-- SITEMANAGER START FOOTER -->
@@ -287,14 +177,6 @@
 <span  style="float:left;" ><span></span>EVENTS CALENDAR
 </span>
 </a><div class="well col-xs-12">
-<h4>Newsroom Search</h4>
-  <form action="//www.msudenver.edu/newsroom/search/" class="form-search">
-	<input type="hidden" name="cx" value="004867254463714202705:7eewc-qjr3g" />
-	<input type="hidden" name="cof" value="FORID:11" />
-	<input type="hidden" name="ie" value="UTF-8" />
-    <input type="text" name="q" class="input-small"/>
-    <button type="submit" class="btn btn-default btn-small">Search</button>
-</form>
 </div><div class="row">
 <div class="col-xs-12">
 <div class="panel panel-default clickable" data-href="">
@@ -318,36 +200,49 @@
         </div>
     </div>
 
-    <!-- BEGINS  FOOTER -->
-    <div class="container-fluid">
-        <div class="row footer">
-          <div class="container">
-          <div class="col-xs-12 col-sm-6 col-md-8 col-lg-8 campus-info">
-                <p>
-                  <a href="/"><strong>Metropolitan State University of Denver</strong></a><br>
-                  <a href="/maps">Student Success Building, 890 Auraria Pkwy <br>
-                    Denver, CO 80204 </a> <br>
-                    <a href="/contact">Contact Us:</a> <a href="tel:303-556-5740"> 303-556-5740</a>
-                </p>
-            </div>
 
-    	<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-                <p>
-                  <a class="t4Edit-page" href="https://adt4apps.msudenver.edu/terminalfour/SiteManager?ctfn=publish&amp;fnno=31&amp;sid=30947&amp;chid=1&amp;lang=en&amp;ede=true">&copy;</a> Metropolitan State University of Denver <br>
-                      <a href="/privacy">Privacy, Terms and Conditions</a> <br>
-                    <a href="http://www.collegeportraits.org/CO/MSU_Denver">
-                      <img class="img-responsive college-portrait" src="https://msudenver.edu/media/assets/img/college-portrait-logo-footer.png"  alt="College Portrait">
-                      <!-- <img class="img-responsive college-portrait" src="<t4 type='media' id='87681' formatter='image/path'/>" alt="College Portrait"> -->
-                     </a>
-                    <br>
-                </p>
-            </div>
-          </div>
-        </div>
-    </div>
+
+<div w3-include-html="htmlcomponents/footer.html"></div>
+
     <!-- ENDS FOOTER -->
+<!-- This code must be installed within the body tags -->
+<script type="text/javascript">
+    var lhnAccountN = "29468-1";
+    var lhnButtonN = 0;
+    var lhnChatPosition = 'default';
+    var lhnDepartmentN = 0;
+    var lhnWindowN = 33133;
+</script>
+<script src="//www.livehelpnow.net/lhn/widgets/chatbutton/lhnchatbutton-current.min.js" type="text/javascript" id="lhnscript"></script>
 
-<!-- BEGINS SECOND DEPENDENCY INCLUDE -->
+                  <SCRIPT>
+function CustomOpenLHNChat(){
+if (typeof lhnWin !== 'undefined' && lhnWin){
+
+if (!lhnWin.closed){
+
+lhnWin.blur();
+
+setTimeout(lhnWin.focus(), 10);
+
+return false;
+
+}
+
+}
+
+
+var wleft = (screen.width - 580-32) / 2;
+var wtop = (screen.height - 420 - 96) / 2;
+lhnWin=window.open('http://chat.msudenver.edu/lhn/livechatvisitor.aspx?lhnid=29468', 'lhnchat', 'left=' + wleft + ',top=' + wtop +',width=580,height=435,toolbar=no,location=no,directories=no,status=yes,menubar=no,scrollbars=no,copyhistory=no,resizable=yes');
+}
+</SCRIPT>
+
+
+
+                  <style>div#lhnContainerDone {display: none;} </style>
+
+
 <!-- sidemenu.js  -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script type="text/javascript" src="https://msudenver.edu/media/prod/js/sidemenu.js"></script>
@@ -368,13 +263,35 @@
 <!-- FooterCode -->
 <t4 type='navigation' id='804' />
 
-<!-- ENDS SECOND DEPENDENCY INCLUDE -->
+<!-- matchHeight -->
+        <script type="text/javascript">
+            (function() {
+
+                $(function() {
+                    // apply your matchHeight on DOM ready (they will be automatically re-applied on load or resize)
+
+                    // get test settings
+                    var byRow = $('body').hasClass('.panel-links');
+
+                    // apply matchHeight to each item container's items
+                    $('.items-container').each(function() {
+                        $(this).find('.item').matchHeight({
+                            byRow: byRow
+                        });
+                    });
+                });
+            })();
+        </script>
+
     <script type="text/javascript">
     var version = "0.2.5",
         template = "Two column template";
     </script>
 
 
+    <script>
+    w3IncludeHTML();
+    </script>
 </body>
 
 </html>
