--- a/app/homepage.html
+++ b/app/homepage.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <!--[if IE]><![endif]-->
 <!--[if lt IE 7 ]><html lang="en" class="ie6"><![endif]-->
@@ -50,6 +51,9 @@
 <link rel="shortcut icon" href="https://msudenver.edu/media/assets/ico/favicon.png">
 
 <!-- HeaderCode -->
+
+<!-- collapsible jquery code -->
+
 
 </head>
 
@@ -109,6 +113,7 @@ Celebration of MSU Denver's <br>
 </h3>
 </div>
   </div>
+
 
 
 
