--- a/app/htmlcomponents/content.html
+++ b/app/htmlcomponents/content.html
@@ -174,7 +174,7 @@
 <div class="col-xs-12">
 <div class="clickable card" data-href="/tst/wcmstestsite/expert-profile-content-type.shtml" style="margin-bottom:15px;">
     <div class="row">
-        <div class="col-lg-9 col-md-9 col-sm-7 col-xs-7">
+        <div class="col-xs-7 col-md-9">
             <h3>
                 First Name of Expert Profile Content Type
                 Last Name of Expert Profile Content Type
@@ -183,9 +183,8 @@
             <p><strong>Title:</strong> Title of Expert Profile Content Type</p>
             <p><strong>Expertise:</strong> Expertise of Expert Profile Content Type</p>
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-5 col-xs-5">
+        <div class="col-xs-5 col-md-3">
           <section class='expert-photo'> <img class="img-responsive" src="https://msudenver.edu/media/content/newsroom/stories/irs1.jpg" alt="Metro State accounting students used walkie-talkies in an on-campus exercise presented by the Adrian Project to explain duties of an undercover team. Photo by Jason Braddock." style="   " /> </section>
-           <!-- <img class="img-responsive" src="https://msudenver.edu/media/content/newsroom/stories/irs1.jpg" alt="Metro State accounting students used walkie-talkies in an on-campus exercise presented by the Adrian Project to explain duties of an undercover team. Photo by Jason Braddock." style="   " />-->
         </div>
     </div>
 </div></div><style>
@@ -225,7 +224,7 @@
 </div>
 </div><li><a href="http://www.externalurlforMenuLinkItemContentType.com">External Text of Menu Link Item Content Type</a></li><!--SM Modal Button-->
 
-<div class="col-sm-12 col-lg-12">
+<div class="col-xs-12 col-lg-12">
   <div class="ThreeCornerBox">
     <a class="rowdyblue clickable" data-toggle="modal" href="#109876">
       Modal Button [test] Content Type
@@ -291,10 +290,10 @@
     <br>
 </div>
 </div>
-<!--  --><div class="col-md-12 col-lg-12">
+<!--  --><div class="col-xs-12">
   <div class="panel panel-danger clickable" data-href="/academics/">
   <div class="panel-heading">Box Title of Panel Alert Content Type</div>
-    <div style="height: 300px; overflow:hidden; "class="panel-body">
+    <div class="panel-body">
       <p>Body of Panel Alert Content Type</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. <br /><br />Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet.</p>
     </div>
