merges Joel's changes

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -36,7 +36,6 @@
 <script src="http://www.w3schools.com/lib/w3data.js"></script>
 
 
-
 <!-- HTML5 shim & respond.js, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
                 <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.2.0/respond.min.js"></script>
@@ -369,6 +368,9 @@ $('#nav-search-close').click(function(){
 });
 </script>
 
+<script>
+w3IncludeHTML();
+</script>
 
 <script>
 w3IncludeHTML();
