--- a/app/htmlcomponents/footer.html
+++ b/app/htmlcomponents/footer.html
@@ -1,6 +1,5 @@
 <div class="footer">
 <div class="container ">
-
         <div class="col-sm-6 col-md-6 col-lg-4 social campus-info mobile-msuinfo-show">
               <p>
                 <a href="/"><strong>Metropolitan State University of Denver</strong></a><br><br>
@@ -57,7 +56,9 @@
             </i>
             <br/><br/>
         </div>
+
         <div class="col-sm-6 col-md-6 col-lg-4 social campus-info desktop-msuinfo-show">
+
               <p>
                 <a href="https://msudenver.edu"><strong>Metropolitan State University of Denver</strong></a><br><br>
                 <a href="https://msudenver.edu/maps"><span class="fa fa-map-marker fa-lg"></span> Denver, Colorado</a><br><br>
@@ -74,9 +75,10 @@
              </i>
         </div>
 
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-2 footer-logo">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 footer-logo">
           <a href="https://msudenver.edu"> <img src="http://sitemanager.msudenver.edu/media/assets/homepagespring2016/msudenver-informal_logo.png"></a><br><br>
-          <small>&copy;</small></a><a><small> MSU Denver</small></a><br>
+          <small>&copy;</small></a><a><small> MSU Denver -</small></a>
+
           <a href="/privacy"><small>Privacy Statement</small></a> <br>
           <a href="http://www.collegeportraits.org/CO/MSU_Denver" target="_blank"><small>College Portrait</small></a>
           <br>
