--- a/app/homepage.html
+++ b/app/homepage.html
@@ -88,9 +88,9 @@
         <div class="col-xs-9">
           <img class="msudenver_logo" src="http://sitemanager.msudenver.edu/media/assets/img/MSUdenver-logo.png" alt="MSU Denver Logo">
         </div>
-        <div class="col-xs-2 apply-button">APPLY</div>
+        <!-- <div class="col-xs-2 apply-button">APPLY</div> -->
       </div>
-  </div>
+    </div>
     <div class="navbar-collapse collapse" id="content-nav">
       <div class="container">
          <ul class="nav navbar-nav navbar-center" >
@@ -337,8 +337,8 @@
 <br>
   <h3><a href="/50">
 Join the yearlong <br>
-Celebration of MSU Denver's <br>
-<strong>50th Anniversary </strong>  </a>
+Celebration of MSU Denver s <br>
+<strong>50 th Anniversary </strong>  </a>
 </h3>
 </div>
   </div>
