position mobile search glyph

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -90,6 +90,11 @@
           <img class="msudenver_logo" src="http://sitemanager.msudenver.edu/media/assets/img/MSUdenver-logo.png" alt="MSU Denver Logo">
         </div>
         <!-- <div class="col-xs-2 apply-button">APPLY</div> -->
+        <span class="glyphicon glyphicon-search glyphicon-search-mobile col-xs-1"></span>
+        <button type="button " class="navbar-toggle col-xs-1" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle quick links navigation</span>
+          <span class="fa fa-bars"></span>
+        </button>
       </div>
     </div>
     <div class="navbar-collapse collapse" id="content-nav">
