adds homepage slider module

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -197,8 +197,8 @@
     <!-- *********************************  -->
 
 <!-- navigation object : 2016 - Homepage Slideshow -->
+<div w3-include-html="htmlcomponents/HomeSlideshow.html"></div>
 
-<!-- REMOVED TEMPORARILY WHILE CODING HEADER -->
 
                           <!-- BEGINS NEWS AND CALENDAR SECTION-->
 <div class="container-fluid items-container">
