add missing </div> , add additional Raleway font size

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -25,7 +25,7 @@
 <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' rel='stylesheet' type='text/css' media='screen'>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,300,700,600' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
-<link href="https://fonts.googleapis.com/css?family=Raleway:400,500,800" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700,800" rel="stylesheet">
 
 <!-- CSS -->
 <link rel="stylesheet" type="text/css" media="screen" href="styles/home2016.css" />
@@ -185,6 +185,7 @@
     </div>
   </div>
       <!--/.nav-collapse -->
+</div>
 </div>
 
 
