--- a/app/htmlcomponents/footer.html
+++ b/app/htmlcomponents/footer.html
@@ -1,5 +1,5 @@
 <div class="footer">
-<div class="container ">
+<div class="container">
         <div class="col-sm-6 col-md-6 col-lg-4 social campus-info mobile-msuinfo-show">
               <p>
                 <a href="/"><strong>Metropolitan State University of Denver</strong></a><br><br>
@@ -17,8 +17,8 @@
              </i>
         </div>
 
-        <div class="col-sm-12 col-md-12 col-lg-6 footer-menu">
-            <div class="col-sm-6 col-md-6 col-lg-6">
+        <div class="col-xs-12 col-md-12 col-lg-6 footer-menu">
+            <div class="col-xs-6 col-md-6 col-lg-6">
               <p>
                 <a href="https://msudenver.edu/about" id="Footer-About">About</a><br>
                 <hr />
@@ -32,7 +32,7 @@
                 <hr class="hide-hr"/>
               </p>
             </div>
-            <div class="col-sm-6 col-md-6 col-lg-6">
+            <div class="col-xs-6 col-md-6 col-lg-6">
               <p>
                 <a href="https://msudenver.edu/admissions/takeatour/" id="Footer-Tours">Tours</a><br>
                 <hr/>
@@ -57,7 +57,7 @@
             <br/><br/>
         </div>
 
-        <div class="col-sm-6 col-md-6 col-lg-4 social campus-info desktop-msuinfo-show">
+        <div class="col-xs-6 col-md-6 col-lg-4 social campus-info desktop-msuinfo-show">
 
               <p>
                 <a href="https://msudenver.edu"><strong>Metropolitan State University of Denver</strong></a><br><br>
