add classes for mobile search area

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -185,9 +185,9 @@
 </div>
 
 <!-- mobile search-input -->
-          <!-- <div id="content-nav"> -->
+          <div id="content-nav-mobile">
             <div id="search-input" class="inner-addon left-addon search-input-mobile">
-                <span class="glyphicon glyphicon-search glyphicon-opened"></span>
+                <span class="glyphicon glyphicon-search glyphicon-opened-mobile"></span>
                       <input  id="search-text-mobile"
                         name="zz"
                         type="text"
@@ -208,11 +208,11 @@
 
                 <!-- END AUTO SUGGEST -->
                 <div class="gobutton english-MOD">
-                    <a id="searchGoLink" class="button disableGoButton" onclick="MODGLOBALS.HEADER.searchGoLinkOnClick();" href="javascript:void(0)">Search</a>
-                    <span id="nav-search-close" class="glyphicon glyphicon-remove"></span>
+                    <a id="searchGoLink" class="button disableGoButton gobutton-mobile" onclick="MODGLOBALS.HEADER.searchGoLinkOnClick();" href="javascript:void(0)">Search</a>
+                    <span id="nav-search-close" class="glyphicon glyphicon-remove glyphicon-remove-mobile"></span>
                 </div>
             </div>
-          <!-- </div> -->
+          </div>
 <!-- end mobile search-input -->
 
 
