collapse mobile nav bar when search glyph clicked

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -228,6 +228,7 @@ $('#search-text').keyup(function () {
 <script type="text/javascript">
   $('.glyphicon-search-mobile').click(function(){
      $('.search-input-mobile').slideToggle();
+     $('#content-nav').removeClass('in');
     //  $('.fa-bars').data-toggle();
   });
 </script>
