resize and reposition hamburger and search glyph

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -78,17 +78,18 @@
 <div class="container-fluid">
 <!-- QUICKLINKS TOOLBAR -->
   <div class="navbar navbar-fixed-top toolbar">
+    <button type="button " class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+      <span class="sr-only">Toggle quick links navigation</span>
+      <span class="fa fa-bars"></span>
+    </button>
     <div class="blue-header">
       <div class="container">
         <div class="col-xs-9">
           <img class="msudenver_logo" src="http://sitemanager.msudenver.edu/media/assets/img/MSUdenver-logo.png" alt="MSU Denver Logo">
         </div>
         <!-- <div class="col-xs-2 apply-button">APPLY</div> -->
-        <span class="glyphicon glyphicon-search glyphicon-search-mobile col-xs-1"></span>
-        <button type="button " class="navbar-toggle col-xs-1" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle quick links navigation</span>
-          <span class="fa fa-bars"></span>
-        </button>
+        <span class="glyphicon glyphicon-search glyphicon-search-mobile"></span>
+
       </div>
     </div>
     <div class="navbar-collapse collapse" id="content-nav">
