toggle show/hide mobile dropdown-menu/search-input

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -230,7 +230,9 @@ $('#search-text').keyup(function () {
   $('.glyphicon-search-mobile').click(function(){
      $('.search-input-mobile').slideToggle();
      $('#content-nav').removeClass('in');
-    //  $('.fa-bars').data-toggle();
+  });
+  $('.navbar-toggle').click(function(){
+     $('.search-input-mobile').hide();
   });
 </script>
 
