clean up msu-denver name

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -176,7 +176,7 @@
                               name="zz"
                               type="text"
                               class="home-input"
-                              placeholder="SEARCH MSU-DENVER"
+                              placeholder="SEARCH MSU DENVER"
                               onkeyup="MODGLOBALS.HEADER.searchOnKeyUp(this, event)"
                               onclick="return MODGLOBALS.HEADER.searchInputOnClick()"
                               onblur="javascript:internalLabelBlur(this);"
