add correct line breaks in code

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -206,7 +206,8 @@
 $('#search-text').keyup(function () {
     if ($.trim($('#search-text').val()).length) {
         $('#searchGoLink').removeClass('disableGoButton');
-    } else {
+    }
+    else {
         $('#searchGoLink').addClass('disableGoButton');
     }
 });
