fix mobile search field opacity toggle

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -227,11 +227,11 @@ $('#q').keyup(function () {
     }
 });
 
-$('#search-text-mobile').focusin(function () {
-        $('#search-text-mobile').css('opacity', '1.0');
+$('.search-text-mobile').focusin(function () {
+        $('.search-text-mobile').css('opacity', '1.0');
 });
-$('#search-text-mobile').focusout(function () {
-        $('#search-text-mobile').css('opacity', '0.8');
+$('.search-text-mobile').focusout(function () {
+        $('.search-text-mobile').css('opacity', '0.8');
 });
 </script>
 
