--- a/app/homepage.html
+++ b/app/homepage.html
@@ -154,7 +154,7 @@
                   <!-- END AUTO SUGGEST -->
                   <div class="gobutton">
                     <a id="searchGoLink" class="disableGoButton">
-                      <button type="submit" class="button" id="qButton">SEARRCH</button>
+                      <button type="submit" class="button" id="qButton">SEARCH</button>
                     </a>
                   </div>
                   <span id="nav-search-close" class="glyphicon glyphicon-remove"></span>
