add javascript to accommodate pushdown menu when clicking search bar icons

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -253,6 +253,15 @@ $('.search-text-mobile').focusout(function () {
   });
 </script>
 
+<script type="text/javascript">
+  $('.search-desktop').click(function(){
+     $('#content-nav').css('max-height', '50px');
+  });
+  $('.glyphicon-remove').click(function(){
+     $('#content-nav').css('max-height', '');
+  });
+</script>
+
 <!-- *********************************  -->
 <!-- Global Header ENDS HERE -->
 <!-- *********************************  -->
