clean up html for lower nav menu

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -219,16 +219,18 @@
   </form>
   <!-- end mobile search-input -->
 <!-- ****** END PUSHDOWN MENU AND SEARCH BAR ****** -->
-<div class="nav container navbar-inner">
-    <li><a><div class="col-xs-4">
+<div class="row navbar-lower">
+<div class="container navbar-lower toolbar">
+    <div class="col-xs-4">
         STUDENT HUB
-      </div></a></li>
-    <li><a><div class="col-xs-4">
+    </div>
+    <div class="col-xs-4">
         FACULTY & STAFF
-      </div></a></li>
-    <li><a><div class="col-xs-4">
+    </div>
+    <div class="col-xs-4">
         ATHLETICS
-      </div></a></li>
+    </div>
+</div>
 </div>
 
 
