comments out non needed JS files

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -305,7 +305,7 @@ $('.search-text-mobile').focusout(function () {
 
 <!-- BEGINS SECOND DEPENDENCY INCLUDE -->
 <!-- sidemenu.js  -->
-<script type="text/javascript" src="https://msudenver.edu/media/prod/js/sidemenu.js"></script>
+<!-- <script type="text/javascript" src="https://msudenver.edu/media/prod/js/sidemenu.js"></script> -->
 <!-- modernizr -->
 <script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/modernizr/modernizr.custom.38346.js"></script>
 <!-- bootstrap.js -->
@@ -316,7 +316,7 @@ $('.search-text-mobile').focusout(function () {
 <!-- main.min.js -->
 <script type="text/javascript" src="https://msudenver.edu/media/prod/js/main.min.js"></script>
 <!-- match.min.js -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.0/jquery.matchHeight-min.js"></script>
+<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.0/jquery.matchHeight-min.js"></script> -->
 
 <script type="text/javascript" src="jquery/HeaderHover.js"></script>
 <script type="text/javascript" src="jquery/HeaderSearchHide.js"></script>
