Home hero image rename and adds sample layout

--- a/app/htmlcomponents/Home-PageHero.html
+++ b/app/htmlcomponents/Home-PageHero.html
@@ -1,1 +1,16 @@
 <!-- HERO STARTS HERE -->
+<section id="PageHero">
+  <div class="container-fluid">
+    <img class="img-responsive" src="http://placehold.it/4000x2000">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <h2>caption goes here</h2>
+          <h3>Caption sub head</h3>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+<!-- HERO ENDS HERE-->
