adds new components

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -288,11 +288,9 @@ $('.search-text-mobile').focusout(function () {
 <div w3-include-html="htmlcomponents/Home-PageHero.html"></div>
 <div w3-include-html="htmlcomponents/Home-RunRoad.html"></div>
 <div w3-include-html="htmlcomponents/Home-Stories.html"></div>
-
-
-
-
-
+<div w3-include-html="htmlcomponents/Home-AtatGlance.html"></div>
+<div w3-include-html="htmlcomponents/Home-Quote.html"></div>
+<div w3-include-html="htmlcomponents/Home-Events.html"></div>
 
 
 
